--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Censorship</title>
-  <link rel="stylesheet" href="../../base.css" type="text/css">
+  <link rel="stylesheet" href="./base.css" type="text/css">
   <style>
     * {
       box-sizing: border-box;
